k8s/update/deployment-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-deployment
  namespace: p-go-update
  labels:
    app: update-persona
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-persona
  template:
    metadata:
      labels:
        app: update-persona
    spec:
      nodeSelector:
        workload: update
      containers:
        - name: update-container
          image: danysoftdev/p-go-update:latest
          ports:
            - containerPort: 8080
