k8s/update/pod-update.yaml
apiVersion: v1
kind: Pod
metadata:
  name: update-pod
  namespace: p-go-update
  labels:
    app: update-persona
spec:
  nodeSelector:
    workload: update
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: update-container
      image: danysoftdev/p-go-update:latest
      ports:
        - containerPort: 8080
