k8s/update/service-update.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-service
  namespace: p-go-update
  labels:
    app: update-persona
spec:
  selector:
    app: update-persona
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8080
  type: ClusterIP
