k8s/update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personas-update-ingress
  namespace: p-go-update
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /actualizar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: update-service
                port:
                  number: 8084
